{
    "name": "Controls",
    "maps": [
        {
            "name": "InGame",
            "id": "af89a6d8-06a9-43a6-8ef1-54a218216a33",
            "actions": [
                {
                    "name": "Shoot",
                    "type": "PassThrough",
                    "id": "daca5b6c-a432-412b-84d0-1ecdf8ddc1df",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Reload",
                    "type": "PassThrough",
                    "id": "1967f6f9-435c-4d29-a64f-37ec2082a944",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Weapon1",
                    "type": "PassThrough",
                    "id": "4c1d5ffc-cc9d-4139-ad89-3c8a1c53ef8b",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Weapon2",
                    "type": "PassThrough",
                    "id": "ce5bb327-b34b-4c5b-8483-e17ecf72445c",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Weapon3",
                    "type": "PassThrough",
                    "id": "f68fca56-8a0e-4cf1-a62d-1115fd5e2659",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Weapon4",
                    "type": "PassThrough",
                    "id": "5b4a701d-f73f-4f38-a4dd-befc5b6154e3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "6795d53b-4c77-4c2a-996f-1b08db15dd57",
                    "path": "<Mouse>/press",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Shoot",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "88c0be56-bdd3-491d-9d6d-0f2be67ea57f",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8a5b1dc3-e5c9-4667-bdce-ce115974e71c",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Weapon1",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "84ed5cbb-e2e5-44e9-9534-a1276a91e6ee",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Weapon2",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6667e8db-93e0-4d1b-8c43-91e2af060e72",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Weapon3",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "23a57990-0d1d-4ae2-96b8-f169fa5d0080",
                    "path": "<Keyboard>/4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Weapon4",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Permenanet",
            "id": "8a05f712-4fac-43bf-82ab-5cb828d08c7b",
            "actions": [
                {
                    "name": "MousePos",
                    "type": "PassThrough",
                    "id": "60539386-db1f-4c0d-81f0-651d7745845d",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "29d64221-5988-4e23-8285-35d1a567aa09",
                    "path": "<Mouse>/position",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "MousePos",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": []
}